etc/kubernetes/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - 
          image: openshiftacademiaonline/nginx-dev:latest
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
          name: nginx
          ports:
            -
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 1
          volumeMounts:
            - 
              mountPath: /etc/nginx/conf.d/default.conf
              name: nginx-default
              readOnly: true
              subPath: default.conf
            - 
              mountPath: /etc/nginx/nginx.conf
              name: nginx-conf
              readOnly: true
              subPath: nginx.conf
            -
              mountPath: /var/cache/nginx
              name: nginx-cache
            -
              mountPath: /var/run
              name: nginx-run
      volumes:
        - 
          configMap:
            name: nginx.conf
          name: nginx-conf
        - 
          name: nginx-default
          secret:
            secretName: default.conf
        -
          name: nginx-cache
          emptyDir: {}
        -
          name: nginx-run
          emptyDir: {}
