etc/kubernetes/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  ports:
  - 
    nodePort: 30000
    port: 80
    targetPort: 8080
  selector:
    app: nginx
  type: NodePort
