etc/kubernetes/nginx-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx
spec:
  podSelector:
    matchLabels:
      app: nginx
  ingress:
    -
      ports:
        -
          port: 8080
